--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                     <div class="precaution-summary">
                         <h3>Recommendations:</h3>
                         <p><%= uvPrecautionSummary %></p>
-                        <button class="toggle-details-btn" onclick="toggleDetails()">Show/Hide Details</button>
+                        <button class="toggle-details-btn" onclick="toggleDetails()">Show Details</button>
                     </div>
 
                     <div class="precaution-details" id="uvPrecautionDetails">
